# wasm-embed

./: .gitignore  Cargo.toml  model_architecture.xml
src/: lib.rs  main.rs
